fixes overlap of post titles and times

--- a/app/stylesheets/shared/_wire.css.sass
+++ b/app/stylesheets/shared/_wire.css.sass
@@ -48,9 +48,7 @@
     font-family: Helvetica, sans-serif
     
   .corner
-    position: absolute
-    right: 10px
-    top: 10px
+    float: right
     color: #888
     font-family: Helvetica, sans-serif
     font-size: 11px
